2013-03-18  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/unit_test/unit-tests.mk: Regen.

2013-03-18  Guillaume Lazzara  <z@lrde.epita.fr>

	Write a valid test for labeling::foreground.

	* tests/labeling/Makefile.am: Add more extra-dist files.

	* tests/labeling/foreground.cc: Rewrite.

	* tests/labeling/foreground.ref.pgm: New.

2013-03-18  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation issues.

	* mln/fun/v2v/round_sat.hh,
	* mln/io/pdf/get_header.hh: Add missing includes.

	* mln/value/internal/gray_f.hxx: Update use of math::round.

	* tests/data.hh.in: Add a new path.

	* tests/unit_test/Makefile.am,
	* tests/unit_test/cond_tests_magickxx: Consider more conditional
	tests.

	* tests/unit_test/cond_tests_poppler: New.

2013-03-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/algebra/mat.cc: Fix test.

2013-03-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Automatically initialize GraphicsMagick.

	* mln/io/magick/internal/init_magick.hh: New.

	* mln/io/magick/load.hh,
	* mln/io/magick/save.hh: Use init_magick struct and update doc.

	* tests/io/magick/load.cc,
	* tests/io/magick/save.cc: Remove references to InitializeMagick.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/img/2dgrid.png: New. Add missing file.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Update use of math::round.

	* mln/convert/impl/from_double_to_value.hh,
	* mln/convert/impl/from_float_to_value.hh: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/.gitignore: exclude .dox files.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation in mln/canvas.

	* mln/canvas/browsing/backdiagonal2d.hh,
	* mln/canvas/browsing/diagonal2d.hh,
	* mln/canvas/browsing/dir_struct_elt_incr_update.hh,
	* mln/canvas/browsing/directional.hh,
	* mln/canvas/browsing/fwd.hh,
	* mln/canvas/browsing/snake_fwd.hh,
	* mln/canvas/browsing/snake_generic.hh: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve look'n feel of general documentation.
